--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "css-element-queries": "^1.0.1",
     "font-awesome": "^4.7.0",
     "ng-contenteditable": "^1.0.5",
     "rxjs": "^5.5.2",
